	* XPM files with 65-92 colours are now saved with smaller size
	* Raw RGB palette files (6-bit PAL and 8-bit ACT) can now be loaded/saved via the Palette menu
	* TIFF compression made configurable
	* Dimensions can now be specified when loading SVG files
	* SVG files now can be loaded through 'rsvg-convert', in absence of GTK+2 librsvg plugin
	* Animation cycles can now specify sequence steps as containing several layers, or none : See handbook section 9.3.3 for details
	* Image loading and new image creation are now undoable by default
	* Committing paste when changing tool is now enabled by default
	* Saving an image now commits paste if auto commit mode is enabled
	* "Scale canvas" and "Resize canvas" now remember their aspect ratio toggle setting
	* The Free Rotate window now remembers the previous rotation angle in that mtPaint session
	* Dock area state is now remembered across sessions (unless opened automatically, for multiple files on command line)
	* Alpha values for colours A & B are now displayed on settings toolbar when editing image with alpha in coupled alpha mode
	* Undo system now uses a bit less memory
	* Initial undo memory size is now 1/4 of available memory
	* Support for compiling with giflib 5, libpng 1.6, libjpeg 9, OpenJPEG 2 added
	* BUGFIX - Compilation without JPEG and TIFF support now works again
	* BUGFIX - FreeType text tool now skips directory loops when scanning font directories
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
	* BUGFIX - Preview of Transform Colour no longer ignores area within paste marquee
	* BUGFIX - Ctrl+left/right/double click now set both colour and alpha from canvas in coupled alpha mode, as they should
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle