@@ -123,6 +123,7 @@ int do_a_load_x(char *fname, int undo, void *v);
 void canvas_center(float ic[2]);
 void align_size(float new_zoom);
 void realign_size();
+int ftype_selector(int mask, char *ext, int def, char **names, int *ftypes);
 int tiff_type_selector(int mask, int def, char **names);
 void init_ls_settings(ls_settings *settings, void **wdata);
 void fs_setup(GtkWidget *fs, int action_type);
