@@ -32,6 +32,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* TIFF compression made configurable
 	* Dimensions can now be specified when loading SVG files
 	* SVG files now can be loaded through 'rsvg-convert', in absence of GTK+2 librsvg plugin
+	* Animation frames now can be saved in any suitable supported file format
 	* Animation cycles can now specify sequence steps as containing several layers, or none : See handbook section 9.3.3 for details
 	* Image loading and new image creation are now undoable by default
 	* Committing paste when changing tool is now enabled by default
